Updated configurations and controllers with latest implementations. Synchronized MyConfig for password encoding and model mapping, incorporated optimized user handling in UserController, and enhanced organization management logic in UserStorageController. Refactored UserService for streamlined user updates and log writing.